TPLKEENLY-220 #resolve fixing alignment of right menu

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2030,7 +2030,7 @@ body {
             display: table;
             .wrapper-submenu-items {
                 display: table-cell;
-                padding-left: 40px;
+                padding-left: 30%;
                 vertical-align: middle;
                 .menu {
                     &.nav-list {
@@ -2100,16 +2100,14 @@ body {
             }
             .total-menu-inner {
                 .moduletable {
+                    padding-left: 30%;
+                    .box-sizing(border-box);
                     bottom: 0;
                     color: @color-five;
-                    display: block;
                     font-family: @serifFontFamily;
                     font-size: @baseFontSize + 2;
                     left: 0;
-                    margin: 0 auto;
                     position: absolute;
-                    right: 0;
-                    text-align: center;
                     text-transform: uppercase;
                 }
                 .btn {
